--- a/index.html
+++ b/index.html
@@ -1,5 +1,60 @@
 <!DOCTYPE html>
-<meta charset="UTF-8">
-<html>
-  <li><a href="https://happy-soy-sauce.github.io/">酱油首页</a></li>
-</html>
+<head>
+<meta charset="utf-8" />
+<title></title>
+<link rel="stylesheet" type="text/css" href="style.css" />
+</head>
+<body>
+<div class="main" >
+<div  class="content12">
+<div class="daohang">
+<div class="img"><img src="./logo.png"></div>
+<ul>
+<li class="active"><a href="index.html">首页</a>
+</li>
+<li ><a href="happy-soy-sauce.github.io">酱油主页</a></li>
+
+</ul>
+</div>
+</div>
+<div class="clear"></div>
+<div  class="content12">
+<div class="guanggaotupian">
+<div class="img">
+<img src="./jyid2002.png"></div>
+</div>
+</div>
+<div class="clear"></div>
+<div  class="content8">
+<div class="taitou">
+<div class="title">
+<div class="stitle">校园生活</div>  <a href="#" class="more"></a>
+</div>
+</div>
+<div class="xysh">
+<ul>
+
+<li>
+<div class="desc">
+    <font color="#B0C4DE">&ensp;&ensp;2023.9&ensp;&ensp;&ensp;&ensp;</font><a href="404.html">2023班级军训</a>
+<div class="clear"></div>
+
+</div>
+</li>
+
+</ul>
+</div>
+</div>
+</form>
+</div>
+</div>
+<div  class="content12">
+<div class="taitou">
+
+<div class="title">
+<div class="stitle">风采图片</div>  <a href="#" class="more"></a>
+</div>
+
+<div class="img"><img src="./jyid2003.png" height="220"></div>
+
+</div></div></body></html>
