--- a/2023BB/index.html
+++ b/2023BB/index.html
@@ -1,33 +1,35 @@
 <a>&emsp;&emsp;&emsp;</a>	<a>目录</a></br>			
-<a>&emsp;&emsp;&emsp;</a>	<a href="1.html">	1	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="2.html">	2	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="3.html">	3	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="4.html">	4	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="5.html">	5	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="6.html">	6	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="7.html">	7	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="8.html">	8	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="9.html">	9	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="10.html">	10	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="11.html">	11	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="12.html">	12	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="13.html">	13	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="14.html">	14	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="15.html">	15	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="16.html">	16	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="17.html">	17	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="18.html">	18	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="19.html">	19	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="20.html">	20	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="21.html">	21	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="22.html">	22	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="23.html">	23	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="24.html">	24	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="25.html">	25	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="26.html">	26	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="27.html">	27	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="28.html">	28	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="29.html">	29	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="30.html">	30	</a>	</br>
-<a>&emsp;&emsp;&emsp;</a>	<a href="31.html">	31	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="1.html">	视频&ensp;1	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="2.html">	视频&ensp;2	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="3.html">	视频&ensp;3	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="4.html">	视频&ensp;4	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="5.html">	视频&ensp;5	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="6.html">	视频&ensp;6	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="7.html">	视频&ensp;7	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="8.html">	视频&ensp;8	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="9.html">	视频&ensp;9	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="10.html">	视频10	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="11.html">	视频11	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="12.html">	视频12	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="13.html">	视频13	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="14.html">	视频14	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="15.html">	视频15	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="16.html">	视频16	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="17.html">	视频17	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="18.html">	视频18	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="19.html">	视频19	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="20.html">	视频20	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="21.html">	视频21	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="22.html">	视频22	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="23.html">	视频23	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="24.html">	视频24	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="25.html">	视频25	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="26.html">	视频26	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="27.html">	视频27	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="28.html">	视频28	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="29.html">	视频29	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="30.html">	视频30	</a>	</br>
+<a>&emsp;&emsp;&emsp;</a>	<a href="31.html">	视频31	</a>	</br>
 <a>&emsp;&emsp;&emsp;</a>	<a>本系列页面还未完工</a></br>			
+<a>&emsp;&emsp;&emsp;</a> <a>tip:视频全是朱老师拍的，有的没打包给我就没有呈现，也就是说本页内容只包含第一场，且画质模糊，如果你有素材可以点以下按钮</a>
+<a href="http://wpa.qq.com/msgrd?v=3&uin=15511535284&site=qq&menu=yes">有素材点我</a>
