--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
 <li>
 <div class="desc">
-    <font color="#B0C4DE">&ensp;&ensp;2023.9&ensp;&ensp;&ensp;&ensp;</font><a href="404.html">2023班级军训</a>
-    <font color="#B0C4DE">&ensp;&ensp;2023.9&ensp;&ensp;&ensp;&ensp;</font><a href="./2023BB">2023篮球赛</a>
+    <font color="#B0C4DE">&ensp;&ensp;2023.9&ensp;&ensp;&ensp;&ensp;</font><a href="404.html">2023班级军训</a></br>
+    <font color="#B0C4DE">&ensp;&ensp;2023.9&ensp;&ensp;&ensp;&ensp;</font><a href="./2023BB">2023篮球赛</a></br>
 <div class="clear"></div>
 
 </div>
