--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <head>
+    <title>漳州实验C2班</title>
+    <style>
+@font-face{
+  font-family: 'ys';
+  src: url(https://fs-im-kefu.7moor-fs1.com/29397395/4d2c3f00-7d4c-11e5-af15-41bf63ae4ea0/1693381858156/汉仪文黑-85W.ttf);<!--(up.ly93.cc)提供寄存-->
+}
+</style>
+    
+<body>
+    <div style="font-family: ys"> 
 <meta charset="utf-8" />
 <title></title>
 <link rel="stylesheet" type="text/css" href="style.css" />
@@ -55,7 +65,6 @@
 <div class="title">
 <div class="stitle">风采图片</div>  <a href="#" class="more"></a>
 </div>
-
 <div class="img"><img src="./jyid2003.png" height="220"></div>
 
 </div></div></body></html>
