--- a/2023BB/index.html
+++ b/2023BB/index.html
@@ -1,3 +1,4 @@
+<title>高一C2篮球赛回放</title>
 <a>&emsp;&emsp;&emsp;</a>	<a>目录</a></br>			
 <a>&emsp;&emsp;&emsp;</a>	<a href="1.html">	视频&ensp;1	</a>	</br>
 <a>&emsp;&emsp;&emsp;</a>	<a href="2.html">	视频&ensp;2	</a>	</br>
