--- a/0index.html
+++ b/0index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <head>
-    <title>漳州实验C2班</title>
+    <title>漳州实验 原 C2班</title>
+    <style>
+html {
+  filter: grayscale(1);
+}
+</style>
     <style>
 @font-face{
   font-family: 'ys';
@@ -18,7 +23,7 @@
 <div class="main" >
 <div  class="content12">
 <div class="daohang">
-<div class="img"><img src="./logo.png"></div>
+<div class="img"><h1>原 C2已解散</h1></div>
 <ul>
 <li class="active"><a href="index.html">首页</a>
 </li>
