--- a/0index.html
+++ b/0index.html
@@ -23,7 +23,7 @@ html {
 <div class="main" >
 <div  class="content12">
 <div class="daohang">
-<div class="img"><h1>原 C2已解散</h1></div>
+<div class="img"></br><h1>&emsp;原 C2已解散</h1></div>
 <ul>
 <li class="active"><a href="index.html">首页</a>
 </li>
